--- a/autographs.html
+++ b/autographs.html
@@ -12,6 +12,10 @@
       <a href="password.html" id="memory" >MEMORIES</a>
       <a href="#" id="autographs" class="active">AUTOGRAPHS</a>
     </div>
+    <a href="https://www.kudoboard.com/boards/EquEhHIt">Adrienne Fung</a>
+    <a href="https://www.kudoboard.com/boards/BTCpsJTK">Cheryl Lam</a>
+    <a href="https://www.kudoboard.com/boards/yF4Wwi1W">Jenny Kong</a>
+    <a href="https://www.kudoboard.com/boards/9ikMjob0">Joanna Wong</a>
     <script src="script.js"></script>
   </body>
 </html>
