--- a/autographs.html
+++ b/autographs.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -12,10 +13,10 @@
       <a href="password.html" id="memory" >MEMORIES</a>
       <a href="#" id="autographs" class="active">AUTOGRAPHS</a>
     </div>
-    <a href="https://www.kudoboard.com/boards/EquEhHIt">Adrienne Fung</a>
-    <a href="https://www.kudoboard.com/boards/BTCpsJTK">Cheryl Lam</a>
-    <a href="https://www.kudoboard.com/boards/yF4Wwi1W">Jenny Kong</a>
-    <a href="https://www.kudoboard.com/boards/9ikMjob0">Joanna Wong</a>
+    <a class="name" href="https://www.kudoboard.com/boards/EquEhHIt">Adrienne Fung</a>
+    <a class="name" href="https://www.kudoboard.com/boards/BTCpsJTK">Cheryl Lam</a>
+    <a class="name" href="https://www.kudoboard.com/boards/yF4Wwi1W">Jenny Kong</a>
+    <a class="name" href="https://www.kudoboard.com/boards/9ikMjob0">Joanna Wong</a>
     <script src="script.js"></script>
   </body>
 </html>
