--- a/autographs.html
+++ b/autographs.html
@@ -6,6 +6,10 @@
     <title>repl.it</title>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <style>
+      body{
+       background-image: url("")
+      }
   </head>
   <body>
     <div id="nav">
