--- a/autographs.html
+++ b/autographs.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
       body{
-       background-image: url("")
+       background-image: url("koreanrestraunt.JPG")
       }
   </head>
   <body>
