--- a/autographs.html
+++ b/autographs.html
@@ -8,7 +8,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
       body{
-       background-image: url("koreanresturant.JPG")
+       background-image: url("koreanresturant.JPG");
+        background-size: contain;
+        background-repeat: no-repeat;
       }
     </style>
   </head>
@@ -25,4 +27,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
