--- a/autographs.html
+++ b/autographs.html
@@ -12,6 +12,9 @@
         background-size: contain;
         background-repeat: no-repeat;
       }
+      a{
+      color: white;
+      }
     </style>
   </head>
   <body>
