--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </div>
     <h2>
       Congratulations class of 2020!!! 😊<br>
-      This website is dedicated to Adrienne, Cheryl, Danielle, Esther, Jenny, Joanna, Sooyoung <br>
+      This website is dedicated to Adrienne, Cheryl, Danielle, Esther, Jenny, Joanna, Sooyoung. <br>
+       <br>
       Made by Joanna Wong
     </h2>
     <script src="script.js"></script>
