--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       Congratulations class of 2020!!! 😊<br>
       This website is dedicated to Adrienne, Cheryl, Danielle, Esther, Jenny, Joanna, Sooyoung. <br>
        <br>
-      Made by Joanna Wong
+      Made by Joanna Wong.
     </h2>
     <script src="script.js"></script>
   </body>
